--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "gh-pages": "^5.0.0",
     "nanoid": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,7 +22,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -44,7 +46,12 @@
     ]
   },
   "devDependencies": {
-    "@types/aria-query": "^5.0.2",
-    "@types/react-router-dom": "^5.3.3"
+    "@testing-library/react": "^12.1.5",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-test-renderer": "^18.0.0",
+    "cypress": "^12.17.4",
+    "eslint-plugin-cypress": "^2.14.0",
+    "fast-check": "^3.12.0",
+    "react-test-renderer": "^17.0.2"
   }
 }
